--- a/quiz_play.html
+++ b/quiz_play.html
@@ -90,7 +90,7 @@
                     <td colspan="2">
                         5.&nbsp;&nbsp;&nbsp;
                         <img class="quizPic" src="image/quiz/05.jpg" />
-                        <audio src="audio/elisabeth/04 Ich Gehör' Nur Mir.mp3" controls></audio>
+                        <audio src="audio/elisabeth/03 Der Letzte Tanz.mp3" controls></audio>
                     </td>
                 </tr>
                 <tr>
