--- a/albumList_deutschOthers.html
+++ b/albumList_deutschOthers.html
@@ -171,7 +171,7 @@
                 <td class="intro">Lucy Westenra</td>
             </tr>
             <tr>
-                <th><a class="intro" href="https://www.youtube.com/playlist?list=PL0E82FFB76BED16AF" target="_blank">2007 Cast Album</a></th>
+                <th><a class="intro" href="https://www.youtube.com/playlist?list=PL0E82FFB76BED16AF" target="_blank">2007 Cast Album*</a></th>
                 <td class="intro">Thomas Borchert</td>
                 <td class="intro">Lyn Liechty</td>
                 <td class="intro">Jesper Tydén</td>
