--- a/albumList_english.html
+++ b/albumList_english.html
@@ -64,6 +64,14 @@
                 <td class="intro">Timothy Scott</td>
                 <td class="intro"></td>
             </tr>
+            <tr>
+                <th><a class="intro" href="https://www.youtube.com/playlist?list=PLEF8JJQC6TyVbkBVR6VsJGE6ptzKraO4v" target="_blank">1998 Film*</a></th>
+                <td class="intro">Elaine Paige</td>
+                <td class="intro">Ken Page</td>
+                <td class="intro">John Partridge</td>
+                <td class="intro">Jacob Brent</td>
+                <td class="intro"></td>
+            </tr>
         </table><br />
         <hr />
         <table border="1" id="deh">
@@ -420,7 +428,7 @@
             <caption><h2>Six</h2></caption>
             <tr>
                 <th class="intro" rowspan="2">Version</th>
-                <th class="intro" colspan="5">Cast</th>
+                <th class="intro" colspan="6">Cast</th>
             </tr>
             <tr>
                 <td class="intro">Catherine of Aragon</td>
