--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
         <h3>
             Elisabeth das Musical:&nbsp;
             <a href="playlist_Elisabeth.html">Playlist</a>&nbsp;
-            <a href="albumList_Elisabeth.html">Soundtracks</a>
+            <a href="albumList_Elisabeth.html">Soundtracks</a>&nbsp;
+            <a href="bilibili_Elisabeth.html">Videos</a>
         </h3>
         <h3>
             Mozart! das Musical:&nbsp;
             <a href="playlist_Mozart!.html">Playlist</a>&nbsp;
-            <a href="albumList_Mozart!.html">Soundtracks</a>
+            <a href="albumList_Mozart!.html">Soundtracks</a>&nbsp;
+            <a href="bilibili_Mozart!.html">Videos</a>
         </h3>
         <h3>
             Rebecca das Musical:&nbsp;
             <a href="playlist_Rebecca.html">Playlist</a>&nbsp;
-            <a href="albumList_Rebecca.html">Soundtracks</a>
+            <a href="albumList_Rebecca.html">Soundtracks</a>&nbsp;
+            <a href="bilibili_Rebecca.html">Videos</a>
         </h3>
         <h3>
             Other deutsche musicals:&nbsp;
@@ -45,7 +48,8 @@
         <br />
 
         <h1>Song Quiz</h1>
-        <button onclick="openQuiz();">Play!</button>
+        <button onclick="openQuiz_v1();">Play_v1</button>
+        <button onclick="openQuiz_v2();">Play_v2</button>
     </div>
     <table class="indexBgm" align="right">
         <tr><td class="indexBgm" align="center">BGM: Kitsch</td></tr>
