--- a/quiz_play.html
+++ b/quiz_play.html
@@ -44,7 +44,7 @@
                     <td id="2b" class="opt"><input id="2b" name="q2" type="radio" required /> B. Wenn ich dein Spiegel wär</td>
                 </tr>
                 <tr>
-                    <td id="2c" class="opt"><input id="2c" name="q2" type="radio" required /> C. Wie kann es möglich sein</td>
+                    <td id="2c" class="opt"><input id="2c" name="q2" type="radio" required /> C. Wie kann es möglich sein?</td>
                     <td id="2d" class="opt"><input id="2d" name="q2" type="radio" required /> D. Der einfache Weg</td>
                 </tr>
             </table>
@@ -77,7 +77,7 @@
                 </tr>
                 <tr>
                     <td id="4a" class="opt"><input id="4a" name="q4" type="radio" required /> A. Die Schatten werden länger (Reprise)</td>
-                    <td id="4b" class="opt"><input id="4b" name="q4" type="radio" required /> B. Ich bin, ich bin Musik</td>
+                    <td id="4b" class="opt"><input id="4b" name="q4" type="radio" required /> B. Ich bin ich bin Musik</td>
                 </tr>
                 <tr>
                     <td id="4c" class="opt"><input id="4c" name="q4" type="radio" required /> C. Wenn ich dein Spiegel wär</td>
@@ -90,7 +90,7 @@
                     <td colspan="2">
                         5.&nbsp;&nbsp;&nbsp;
                         <img class="quizPic" src="image/quiz/05.jpg" />
-                        <audio src="audio/elisabeth/04 Ich Gehör' Nur Mir.mp3" controls></audio>
+                        <audio src="audio/elisabeth/03 Der Letzte Tanz.mp3" controls></audio>
                     </td>
                 </tr>
                 <tr>
@@ -103,9 +103,9 @@
                 </tr>
             </table>
             <br />
-            <button id="buttonNext" onclick="showNext();">Next</button>
-            <input class="button" id="quizSubmit" type="submit" value="Submit" hidden />
-            <input class="button" id="quizClear" type="reset" value="Clear" />
+            <button id="buttonPrevious" type="button" onclick="showPrevious();" hidden>Previous</button>
+            <button id="buttonNext" type="button" onclick="showNext();">Next</button>
+            <button id="quizSubmit" type="submit" hidden>Submit</button>
         </form>
     </div>
 </body>
