--- a/albumList_deutschOthers.html
+++ b/albumList_deutschOthers.html
@@ -21,6 +21,7 @@
         <tr><td><a href="#3mus">3 Musketiere</a></td></tr>
         <tr><td><a href="#artus">Artus Excalibur</a></td></tr>
         <tr><td><a href="#altenDame">Der Besuch der alten Dame</a></td></tr>
+        <tr><td><a href="#eier">Der Eierwurf von Halle</a></td></tr>
         <tr><td><a href="#monteCristo">Der Graf von Monte Christo</a></td></tr>
         <tr><td><a href="#papstin">Die Päpstin</a></td></tr>
         <tr><td><a href="#dracula">Dracula</a></td></tr>
@@ -100,6 +101,29 @@
                 <td class="intro">Ethan Freeman</td>
                 <td class="intro">Masha Karell</td>
                 <td class="intro">Norbert Lamla</td>
+            </tr>
+        </table><br />
+        <hr />
+        <table border="1" id="eier">
+            <caption><h2>Der Eierwurf von Halle</h2></caption>
+            <tr>
+                <th class="intro" rowspan="2">Version</th>
+                <th class="intro" colspan="5">Cast</th>
+            </tr>
+            <tr>
+                <td class="intro"></td>
+                <td class="intro"></td>
+                <td class="intro"></td>
+                <td class="intro"></td>
+                <td class="intro"></td>
+            </tr>
+            <tr>
+                <th><a class="intro" href="https://www.youtube.com/playlist?list=OLAK5uy_nAN4mW3Fxz0j1sTWS6BVoWnBUzAssT6WI" target="_blank">2021 Live Recording</a></th>
+                <td class="intro"></td>
+                <td class="intro"></td>
+                <td class="intro"></td>
+                <td class="intro"></td>
+                <td class="intro"></td>
             </tr>
         </table><br />
         <hr />
