--- a/quiz_play.html
+++ b/quiz_play.html
@@ -44,7 +44,7 @@
                     <td id="2b" class="opt"><input id="2b" name="q2" type="radio" required /> B. Wenn ich dein Spiegel wär</td>
                 </tr>
                 <tr>
-                    <td id="2c" class="opt"><input id="2c" name="q2" type="radio" required /> C. Wie kann es möglich sein</td>
+                    <td id="2c" class="opt"><input id="2c" name="q2" type="radio" required /> C. Wie kann es möglich sein?</td>
                     <td id="2d" class="opt"><input id="2d" name="q2" type="radio" required /> D. Der einfache Weg</td>
                 </tr>
             </table>
@@ -103,9 +103,9 @@
                 </tr>
             </table>
             <br />
-            <button id="buttonNext" onclick="showNext();">Next</button>
-            <input class="button" id="quizSubmit" type="submit" value="Submit" hidden />
-            <input class="button" id="quizClear" type="reset" value="Clear" />
+            <button id="buttonPrevious" type="button" onclick="showPrevious();" hidden>Previous</button>
+            <button id="buttonNext" type="button" onclick="showNext();">Next</button>
+            <button id="quizSubmit" type="submit" hidden>Submit</button>
         </form>
     </div>
 </body>
