--- a/quiz_play.html
+++ b/quiz_play.html
@@ -77,7 +77,7 @@
                 </tr>
                 <tr>
                     <td id="4a" class="opt"><input id="4a" name="q4" type="radio" required /> A. Die Schatten werden länger (Reprise)</td>
-                    <td id="4b" class="opt"><input id="4b" name="q4" type="radio" required /> B. Ich bin ich bin Musik</td>
+                    <td id="4b" class="opt"><input id="4b" name="q4" type="radio" required /> B. Ich bin, ich bin Musik</td>
                 </tr>
                 <tr>
                     <td id="4c" class="opt"><input id="4c" name="q4" type="radio" required /> C. Wenn ich dein Spiegel wär</td>
