--- a/quiz_play.html
+++ b/quiz_play.html
@@ -18,7 +18,7 @@
                     <td colspan="2">
                         1.&nbsp;&nbsp;&nbsp;
                         <img class="quizPic" src="image/quiz/01.jpg" />
-                        <audio src="audio/elisabeth/13 Die Schatten Werden Länger.mp3" controls></audio>
+                        <audio src="audio/quiz/01.mp3" controls></audio>
                     </td>
                 </tr>
                 <tr>
@@ -36,7 +36,7 @@
                     <td colspan="2">
                         2.&nbsp;&nbsp;&nbsp;
                         <img class="quizPic" src="image/quiz/02.jpg" />
-                        <audio src="audio/mozart/36 Wie kann es möglich sein.mp3" controls></audio>
+                        <audio src="audio/quiz/02.mp3" controls></audio>
                     </td>
                 </tr>
                 <tr>
@@ -54,7 +54,7 @@
                     <td colspan="2">
                         3.&nbsp;&nbsp;&nbsp;
                         <img class="quizPic" src="image/quiz/03.jpg" />
-                        <audio src="audio/rebecca/41 Jenseits der Nacht (Reprise).mp3" controls></audio>
+                        <audio src="audio/quiz/03.mp3" controls></audio>
                     </td>
                 </tr>
                 <tr>
@@ -72,7 +72,7 @@
                     <td colspan="2">
                         4.&nbsp;&nbsp;&nbsp;
                         <img class="quizPic" src="image/quiz/04.jpg" />
-                        <audio src="audio/mozart/24 Wie wird man seinen Schatten los - Oedo Kuipers.mp4" controls></audio>
+                        <audio src="audio/quiz/04.mp3" controls></audio>
                     </td>
                 </tr>
                 <tr>
@@ -90,7 +90,7 @@
                     <td colspan="2">
                         5.&nbsp;&nbsp;&nbsp;
                         <img class="quizPic" src="image/quiz/05.jpg" />
-                        <audio src="audio/elisabeth/03 Der Letzte Tanz.mp3" controls></audio>
+                        <audio src="audio/quiz/05.mp3" controls></audio>
                     </td>
                 </tr>
                 <tr>
