--- a/index.html
+++ b/index.html
@@ -17,39 +17,38 @@
 
         <h3>
             Elisabeth das Musical:&nbsp;
-            <a href="playlist_Elisabeth.html">Playlist</a>&nbsp;
-            <a href="albumList_Elisabeth.html">Soundtracks</a>&nbsp;
-            <a href="bilibili_Elisabeth.html">Videos</a>
+            <a href="srcList/playlist_Elisabeth.html">Playlist</a>&nbsp;
+            <a href="srcList/albumList_Elisabeth.html">Soundtracks</a>&nbsp;
+            <a href="srcList/bilibili_Elisabeth.html">Videos</a>
         </h3>
         <h3>
             Mozart! das Musical:&nbsp;
-            <a href="playlist_Mozart!.html">Playlist</a>&nbsp;
-            <a href="albumList_Mozart!.html">Soundtracks</a>&nbsp;
-            <a href="bilibili_Mozart!.html">Videos</a>
+            <a href="srcList/playlist_Mozart!.html">Playlist</a>&nbsp;
+            <a href="srcList/albumList_Mozart!.html">Soundtracks</a>&nbsp;
+            <a href="srcList/bilibili_Mozart!.html">Videos</a>
         </h3>
         <h3>
             Rebecca das Musical:&nbsp;
-            <a href="playlist_Rebecca.html">Playlist</a>&nbsp;
-            <a href="albumList_Rebecca.html">Soundtracks</a>&nbsp;
-            <a href="bilibili_Rebecca.html">Videos</a>
+            <a href="srcList/playlist_Rebecca.html">Playlist</a>&nbsp;
+            <a href="srcList/albumList_Rebecca.html">Soundtracks</a>&nbsp;
+            <a href="srcList/bilibili_Rebecca.html">Videos</a>
         </h3>
         <h3>
             Other deutsche musicals:&nbsp;
-            <a href="albumList_deutschOthers.html">Soundtracks</a>
+            <a href="srcList/albumList_deutschOthers.html">Soundtracks</a>
         </h3>
         <h3>
             English musicals:&nbsp;
-            <a href="albumList_english.html">Soundtracks</a>
+            <a href="srcList/albumList_english.html">Soundtracks</a>
         </h3>
         <h3>
             French musicals:&nbsp;
-            <a href="albumList_french.html">Soundtracks</a>
+            <a href="srcList/albumList_french.html">Soundtracks</a>
         </h3>
         <br />
 
         <h1>Song Quiz</h1>
-        <button onclick="openQuiz_v1();">Play_v1</button>
-        <button onclick="openQuiz_v2();">Play_v2</button>
+        <button onclick="openQuiz();">Play!</button>
     </div>
     <table class="indexBgm" align="right">
         <tr><td class="indexBgm" align="center">BGM: Kitsch</td></tr>
