--- a/srcList/albumList_Elisabeth.html
+++ b/srcList/albumList_Elisabeth.html
@@ -4,17 +4,19 @@
 <head>
     <meta charset="utf-8" />
     <title>Elisabeth soundtracks</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="../style.css" />
+    <script src="../script.js"></script>
+    <link rel="stylesheet" href="albumList_style.css" />
+    <script src="albumList_script.js"></script>
 </head>
-<body style="background-image: url(image/elisabeth.jpg)">
+<body style="background-image: url(../image/elisabeth.jpg)">
     <button class="backButton" onclick="back();">Back</button>
     <div>
         <table border="1">
             <caption><h2>Elisabeth das Musical</h2></caption>
             <tr>
                 <td colspan="6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/YPhxQy1ZiXE?si=9Qjs4fSL1hgysKzZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe name="iframe" width="560" height="315" src="https://www.youtube.com/embed/YPhxQy1ZiXE?si=9Qjs4fSL1hgysKzZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </td>
             </tr>
             <tr>
@@ -53,7 +55,7 @@
                 <td class="intro">Lukas Perman</td>
             </tr>
             <tr>
-                <th><a class="intro" href="https://www.youtube.com/playlist?list=OLAK5uy_mAvUKiEniR9grNGiWovPFSM8tZb6fExMA" target="_blank">2005 Live Recording</a></th>
+                <th><a class="intro" href="https://www.youtube.com/playlist?list=OLAK5uy_mAvUKiEniR9grNGiWovPFSM8tZb6fExMA" target="_blank">2005 Live Recording<br />(2005.10.30/31)</a></th>
                 <td class="intro">Maya Hakvoort</td>
                 <td class="intro">Máté Kamarás</td>
                 <td class="intro">Serkan Kaya</td>
@@ -69,7 +71,7 @@
                 <td class="intro">Oliver Arno</td>
             </tr>
             <tr>
-                <th><a class="intro" href="https://www.youtube.com/playlist?list=OLAK5uy_k5UsHjagGuTawllARYNakTTOLWEDhjz7g" target="_blank">2012 Live Recording</a></th>
+                <th><a class="intro" href="https://www.youtube.com/playlist?list=OLAK5uy_k5UsHjagGuTawllARYNakTTOLWEDhjz7g" target="_blank">2012 Live Recording<br />(2012.9.?)</a></th>
                 <td class="intro">Annemieke van Dam</td>
                 <td class="intro">Mark Seibert</td>
                 <td class="intro">Kurosch Abbasi</td>
@@ -77,7 +79,7 @@
                 <td class="intro">Anton Zetterholm</td>
             </tr>
             <tr>
-                <th><a class="intro" href="https://www.youtube.com/playlist?list=OLAK5uy_lWYB3H-NkH8Sa4PgVBb8mvn4mAN49rZU4" target="_blank">2019 Live Recording</a></th>
+                <th><a class="intro" href="https://www.youtube.com/playlist?list=OLAK5uy_lWYB3H-NkH8Sa4PgVBb8mvn4mAN49rZU4" target="_blank">2019 Live Recording<br />(2019.7.5/6)</a></th>
                 <td class="intro">Pia Douwes</td>
                 <td class="intro">Mark Seibert</td>
                 <td class="intro">David Jakobs</td>
