--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <a href="srcList/albumList_deutschOthers.html">Soundtracks</a>
         </h3>
         <h3>
+            <a href="srcList/programBook.html">Program Books von VBW</a>
+        </h3>
+        <h3>
             English musicals:&nbsp;
             <a href="srcList/albumList_english.html">Soundtracks</a>
         </h3>
@@ -45,7 +48,6 @@
             French musicals:&nbsp;
             <a href="srcList/albumList_french.html">Soundtracks</a>
         </h3>
-        <br />
 
         <h1>Song Quiz</h1>
         <button onclick="openQuiz();">Play!</button>
