--- a/srcList/albumList_deutschOthers.html
+++ b/srcList/albumList_deutschOthers.html
@@ -24,6 +24,7 @@
         <tr><td><a href="#ludwig">Ludwig²</a></td></tr>
         <tr><td><a href="#ma">Marie Antoinette</a></td></tr>
         <tr><td><a href="#robinHood">Robin Hood</a></td></tr>
+        <tr><td><a href="#rockMe">Rock Me Amadeus</a></td></tr>
         <tr><td><a href="#rj">Romeo und Julia</a></td></tr>
         <tr><td><a href="#rudolf">Rudolf - Affaire Mayerling</a></td></tr>
         <tr><td><a href="#sch">Schikaneder</a></td></tr>
@@ -296,6 +297,30 @@
                 <td class="intro"></td>
                 <td class="intro"></td>
                 <td class="intro"></td>
+            </tr>
+        </table><br />
+        <hr />
+        <hr />
+        <table border="1" id="rockMe">
+            <caption><h2>Rock Me Amadeus</h2></caption>
+            <tr>
+                <th class="intro" rowspan="2">Version</th>
+                <th class="intro" colspan="5">Cast</th>
+            </tr>
+            <tr>
+                <td class="intro">Hans</td>
+                <td class="intro">Alter Ego</td>
+                <td class="intro">Isabella</td>
+                <td class="intro">Horst</td>
+                <td class="intro">Markus</td>
+            </tr>
+            <tr>
+                <th><a class="intro" href="https://www.youtube.com/playlist?list=OLAK5uy_m3fnlNeEk3TUmiqpXRRz6Qpyh7FYEyolA" target="_blank">2023 Cast Album</a></th>
+                <td class="intro">Moritz Mausser</td>
+                <td class="intro">Alex Melcher</td>
+                <td class="intro">Katharina Gorgi</td>
+                <td class="intro">Andreas Lichtenberger</td>
+                <td class="intro">Franz Frickel</td>
             </tr>
         </table><br />
         <hr />
