--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body style="background-image: url(image/indexBackground.jpg)">
     <div>
         <h1>Musical Soundtracks</h1>
-
+        <h3>
+            <a href="srcList/programBook.html">Program Books (from VBW)</a>
+        </h3>
         <h3>
             Elisabeth das Musical:&nbsp;
             <a href="srcList/playlist_Elisabeth.html">Playlist</a>&nbsp;
@@ -36,9 +38,6 @@
         <h3>
             Other deutsche musicals:&nbsp;
             <a href="srcList/albumList_deutschOthers.html">Soundtracks</a>
-        </h3>
-        <h3>
-            <a href="srcList/programBook.html">Program Books von VBW</a>
         </h3>
         <h3>
             English musicals:&nbsp;
